--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,7 +162,7 @@ body{
 }
 
 .btn-text{
-    padding: 3px 20px 10px 25px;
+    padding: 3cdpx 20px 10px 25px;
     color: #272343;
 }
 
@@ -186,12 +186,12 @@ body{
     z-index: -1;
 }
   
-  .main-btn:hover:before {
+.main-btn:hover:before {
     width: 100%;
     height: 100%;
     background-color: #FFA434;
     transform: translateX(0);
-  }
+}
 
 /* Toolbox */
 #toolbox{
@@ -212,7 +212,7 @@ body{
 
 .tb-words{
     color: #2d334a;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-top: 15px;
 }
 
@@ -232,13 +232,13 @@ body{
 
 .fab{
     color: #fffffe;
-    font-size: 7rem;
+    font-size: 6rem;
     margin-bottom: 10px;
 }
 
 .box-icon p{
     color: #272343;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold;
     text-align: center;
 }
@@ -251,7 +251,7 @@ body{
 .port-projects{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -261,7 +261,6 @@ body{
     align-items: center;
     padding: 50px;
     margin: 50px 0;
-    background-color: #E8F0FE;
     border-radius: 10px;
 }
 
@@ -270,7 +269,7 @@ body{
 }
 
 .p-mealy{
-    width: 90%;
+    width: 80%;
 }
 
 .project-desc{
@@ -284,27 +283,42 @@ body{
 }
 
 .project-desc p{
-    color: #fffffe;
-    font-size: 1.2rem;
+    color: #2d334a;
+    font-size: 1.1rem;
     font-weight: 500;
+    padding: 30px 5px 10px;
     margin-bottom: 5px 0 10px;
 }
 
+.p-icons{
+    margin-bottom: 5px;
+}
+
 .p-i{
-    color: #fffffe;
+    color: #272343;
     font-size: 2rem;
     padding: 5px;
     margin: 5px 0;
 }
 
 .p-btn{
-    height: 40px;
+    height: 50px;
     background-color: #FFA434;
     border: none;
+    border-radius: 15px;
 }
 
 .p-btn a{
+    font-size: 1.1rem;
+    color: #fffffe;
+    padding: 10px;
     text-decoration: none;
+    cursor: pointer;
+}
+
+.f-port{
+    width: 50%;
+    display: inline;
 }
 
 /* CONTACT */
@@ -423,5 +437,5 @@ button.btn-con{
 }
 
 .btn-text h2{
-    padding-top: 5px;
+    padding: 7px 10px 5px 15px;
 }
