--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,6 @@ body{
     min-height: 80vh;
     display: flex;
     justify-content: space-around;
-
 }
 
 .wrapper{
@@ -245,7 +244,7 @@ body{
 
 /* Projects */
 #portfolio{
-    padding: 100px;
+    padding: 40px 100px;
 }
 
 .port-projects{
@@ -257,10 +256,10 @@ body{
 
 .project{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: 50px;
-    margin: 50px 0;
+    margin: 30px 0;
     border-radius: 10px;
 }
 
@@ -268,8 +267,9 @@ body{
     padding: 20px;
 }
 
-.p-mealy{
-    width: 80%;
+.p-img{
+    width: 500px;
+    height: 400px;
 }
 
 .project-desc{
@@ -306,6 +306,8 @@ body{
     background-color: #FFA434;
     border: none;
     border-radius: 15px;
+    margin: 0 15px 10px 0
+
 }
 
 .p-btn a{
@@ -314,11 +316,6 @@ body{
     padding: 10px;
     text-decoration: none;
     cursor: pointer;
-}
-
-.f-port{
-    width: 50%;
-    display: inline;
 }
 
 /* CONTACT */
@@ -438,4 +435,31 @@ button.btn-con{
 
 .btn-text h2{
     padding: 7px 10px 5px 15px;
+}
+
+#footer{
+    padding: 50px 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1218px) {
+    .wrapper{
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width: 1058px) {
+    .wrapper{
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .intro-img{
+        width: 90%;
+    }
 }
